--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
     {{#unless devoured}} 
     <button class="change-eat btn btn-success" data-id="{{id}}" data-neweat="{{eat}}">
-             {{#if eat}}{{this.name}}{{/if}} <i class="fas fa-utensils"></i>
+             {{#if eat}}{{this.name}}{{/if}}  Eat!  <i class="fas fa-utensils"></i>
     </button>   
     {{this.id}}. {{this.burger_name}}
     {{/unless}} 
