--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,7 @@ body {
   background-color: black;
   background-repeat: no-repeat;
   background-size: 100vw auto;
+  color: #fff;
 }
 
 .burger-header {
